# mailgunner

./: .env.example  .gitignore  Dockerfile  Procfile  README.md  autodeploy.toml  docker-entrypoint.sh  manage.py  pyproject.toml  requirements.txt
.github/workflows/: containers.yml
account/: models.py  oauth.py  urls.py  views.py
account/migrations/: 0001_initial.py  0002_auto_20210507_2007.py
authentication/: urls.py  views.py
conversations/: admin.py  apps.py  models.py  signals.py  urls.py  views.py
conversations/migrations/: 0001_initial.py  0002_auto_20210210_2303.py  0003_attachment_message.py  0004_auto_20210212_1058.py  0005_auto_20210212_1102.py  0006_auto_20210213_0916.py  0007_auto_20210213_0953.py  0008_auto_20210213_1011.py  0009_auto_20210213_1042.py  0010_auto_20210213_1057.py  0011_auto_20210213_1058.py  0012_thread_subject.py  0013_auto_20210213_1235.py  0014_auto_20210213_1450.py  0015_auto_20210313_1457.py  0016_auto_20210313_1503.py  0017_auto_20210313_1512.py  0018_message_status.py  0019_alter_message_status.py  0019_auto_20210506_1214.py
conversations/templatetags/: conversations_extras.py
mailgunner/: asgi.py  celery.py  settings.py  urls.py  views.py  wsgi.py
management/: urls.py
schedule/: admin.py  models.py  tasks.py  urls.py  views.py
schedule/migrations/: 0001_initial.py  0002_auto_20210505_1508.py
static/conversations/: message-form.js  summernote.js
static/schedule/: flatpickr.js
staticfiles/account/: base.css
templates/: base.html  index.html  messages.html  navbar.html
utils/: mail.py
(+27 files in other folders)
