[tool.poetry]
name = "mailgunner"
version = "0.1.0"
description = "A web application that allows sending and receving email through MailGun"
authors = ["Alex Krantz <alex@krantz.dev>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.7"
argon2-cffi = "^20.1.0"
dj-database-url = "^0.5.0"
Django = "^3.2"
django-anymail = {extras = ["mailgun"], version = "^8.2"}
django-better-admin-arrayfield = "^1.4.2"
django-storages = "^1.11.1"
psycopg2-binary = "^2.8.6"
python-dotenv = "^0.15.0"
python-magic = "^0.4.18"
uvicorn = "^0.13.3"
whitenoise = "^5.2.0"
boto3 = "^1.17.5"
gunicorn = "^20.0.4"
celery = "^5.0.5"
redis = "^3.5.3"

[tool.poetry.dev-dependencies]
black = "^21.5b0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
